--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
@@ -22,8 +23,11 @@
     "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
     "next": "^15.2.4",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.0.17"
   }
 }
