--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.486.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.0.17"
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.0.17",
+    "tw-animate-css": "^1.2.5"
   }
 }
