--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
