--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
