--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.486.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
