--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
