--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@eslint/js": "^9.23.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/josa": "^3.0.5",
     "@types/node": "22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
@@ -51,15 +52,18 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.5",
+    "josa": "^3.0.1",
     "jotai": "^2.12.2",
     "lucide-react": "^0.486.0",
     "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.6.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
