--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.55.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.6.0",
