--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2",
     "yup": "^1.6.1"
   }
 }
