--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "yarn build && pm2 start 'yarn next start' --name 'frontend_v2'",
     "lint": "next lint"
   },
   "devDependencies": {
@@ -44,6 +44,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "@sentry/nextjs": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.72.0",
     "axios": "^1.8.4",
