--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "frontend_v2",
   "packageManager": "yarn@4.8.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3004",
     "build": "next build",
-    "start": "yarn build && pm2 start 'yarn next start' --name 'frontend_v2'",
+    "start": "yarn build && pm2 start 'yarn next start -p 3004' --name 'frontend_v2'",
+    "start:prod": "next start -p 3004",
+    "start:dev": "next dev -p 3004",
     "lint": "next lint"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^2.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/josa": "^3.0.5",
@@ -28,6 +32,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
