--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.55.0",
