--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lucide-react": "^0.486.0",
     "next": "^15.2.4",
     "next-intl": "^4.1.0",
+    "next-scroll-restorer": "^0.10.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
